# forge

./: .gitignore  GEMINI.md  HANDOFF.md  launch_forge.sh  pyproject.toml  requirements.txt  run_dt.py  task-phase2-lamborghini.md  task-phase2-memory.md  task_gateway_hardening.md  task_proprietary_middleware.md
.github/workflows/: ci.yml  release.yml
forge/: __init__.py  __main__.py  checkpoint.py  codebase.py  config.py  dashboard.py  events.py  morpheus.py  orchestrator.py  run_dashboard.py  run_meta_loop.py  run_morpheus.py  run_overnight.py  runner.py  version.py  worker_blueprint.py
forge/meta/: __init__.py  contracts.py  orchestrator.py  targeting.py
forge/stages/: __init__.py  stage_1_jim.py  stage_2_deep_think.py  stage_3_implement.py  stage_4_review.py  stage_5_consensus.py  stage_6_fixes.py  stage_7_stress.py
scripts/: build_update.py
update/: __init__.py  manager.py  watchdog.py
